gap fixet i klasser

--- a/src/app/styles/DashboardClasses.module.css
+++ b/src/app/styles/DashboardClasses.module.css
@@ -4,8 +4,9 @@
 
 .classesGrid {
   display: grid;
-  gap: 1rem;
+  gap: 0.5rem;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  margin-bottom: 1rem;
 }
 
 .classContainer {
@@ -19,7 +20,6 @@
   text-align: center;
   height: 150px;
   transition: 0.2s;
-  margin-bottom: 1rem;
 }
 
 .classContainer:hover {
