--- a/src/app/styles/DashboardStatistics.module.css
+++ b/src/app/styles/DashboardStatistics.module.css
@@ -33,7 +33,7 @@
 .chosenClassContainer {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 0.5rem;
+  gap: 0.5rem;
   width: 100%;
 }
 
